# nfsu2-magazine-worker

./: .gitignore  CMakeLists.txt  README.md
src/: magazine.h  main.cpp  operations.cpp  operations.h
